--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name="com.chris.utopia.base.MyApplication">
-        <activity android:name=".module.guide.GuideActivity" android:label="@string/app_name">
+        <activity android:name=".module.system.activity.IndexActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".module.guide.GuideActivity"/>
 
         <activity android:name=".module.system.activity.MainActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
 
