--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,11 @@
 
         <activity android:name=".module.home.activity.TimeAnalysisActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
 
+        <activity android:name=".module.home.activity.ThingLabelActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
+
+        <activity android:name=".module.home.activity.LabelCreateActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
+
+        <activity android:name=".module.role.activity.RoleActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
         <service android:name=".common.service.NotificationService"/>
 
         <meta-data android:name="roboguice.modules" android:value="com.chris.utopia.common.config.MsmModule"/>
