--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sun Dec 04 10:48:58 CST 2016
+#Mon Dec 12 11:35:43 CST 2016
+systemProp.https.proxyPort=808
+systemProp.http.proxyHost=192.168.60.24
+systemProp.https.proxyHost=192.168.60.24
+systemProp.http.proxyPort=808
