--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Dec 29 10:58:46 CST 2016
-systemProp.https.proxyPort=808
-systemProp.http.proxyHost=192.168.60.24
-systemProp.https.proxyHost=192.168.60.24
-systemProp.http.proxyPort=808
+#systemProp.https.proxyPort=808
+#systemProp.http.proxyHost=192.168.60.24
+#systemProp.https.proxyHost=192.168.60.24
+#systemProp.http.proxyPort=808
